# haskell_code_advent_23

./: aoc2023.cabal  hie.yaml
d1/e1/: ex1.hs
d1/e2/: e2.hs
d2/: e2a.hs  e2b.hs
d3/: e1.hs  e2.hs
d4/: e1.hs  e2.hs
d5/: e1.hs
