name:                aoc2023
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , text
                     , split
                     -- Add other common dependencies you might need
  default-language:    Haskell2010
